--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
 </head>
 <h1> Somansh Bodapati </h1>
 <body>
+<p>Phone: +831-854-6568  Email: somansh2408@gmail.com</p>
 <button onClick="ReadMore()">Read More</button>
-<p> Phone: +831-854-6568 </p> <p> Email: somansh2408@gmail.com </p>
 </body>
 <script src="app.js"></script>
 </html>
